[gd_scene load_steps=26 format=2]

[ext_resource path="res://core/start-menu.gd" type="Script" id=1]
[ext_resource path="res://assets/splash/title.png" type="Texture" id=2]
[ext_resource path="res://resources/font.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/ui/pointer.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/player/knight_m_idle_anim_f1.png" type="Texture" id=5]
[ext_resource path="res://assets/misc/coin.png" type="Texture" id=6]
[ext_resource path="res://assets/misc/potion.png" type="Texture" id=7]
[ext_resource path="res://assets/misc/chest.png" type="Texture" id=8]
[ext_resource path="res://assets/music/title.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/ui/pointerTwo.png" type="Texture" id=10]
[ext_resource path="res://assets/sprites/player/knight_m_idle_anim_f3.png" type="Texture" id=11]
[ext_resource path="res://assets/sprites/player/wizard/wizzard_m_idle_anim_f0.png" type="Texture" id=12]
[ext_resource path="res://assets/sprites/player/wizard/wizzard_m_idle_anim_f2.png" type="Texture" id=13]
[ext_resource path="res://assets/sprites/player/wizard/wizzard_m_idle_anim_f3.png" type="Texture" id=14]
[ext_resource path="res://assets/sprites/player/wizard/wizzard_m_idle_anim_f1.png" type="Texture" id=15]
[ext_resource path="res://assets/sprites/player/elf/elf_m_idle_anim_f0.png" type="Texture" id=16]
[ext_resource path="res://assets/sprites/player/elf/elf_m_idle_anim_f3.png" type="Texture" id=17]
[ext_resource path="res://assets/sprites/player/elf/elf_m_idle_anim_f2.png" type="Texture" id=18]
[ext_resource path="res://assets/sprites/player/elf/elf_m_idle_anim_f1.png" type="Texture" id=19]
[ext_resource path="res://assets/sprites/player/knight_m_idle_anim_f2.png" type="Texture" id=20]
[ext_resource path="res://assets/sprites/player/knight_m_idle_anim_f0.png" type="Texture" id=21]

[sub_resource type="Animation" id=1]
resource_name = "selected"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("pointer:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.554785, 1.46409 ),
"update": 0,
"values": [ 690.0, 720.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label0:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.972549, 0.364706, 0, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "selected"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("charSelector:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 690.0, 720.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "selectedChar"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("charSelector:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 450.0, 480.0 ]
}

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 21 ), ExtResource( 5 ), ExtResource( 20 ), ExtResource( 11 ) ],
"loop": true,
"name": "knight",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 15 ), ExtResource( 13 ), ExtResource( 14 ) ],
"loop": true,
"name": "wizard",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 19 ), ExtResource( 18 ), ExtResource( 17 ) ],
"loop": true,
"name": "elf",
"speed": 5.0
} ]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="Sprite" parent="."]
position = Vector2( 0, -67 )
scale = Vector2( 1.20669, 1.16475 )
texture = ExtResource( 2 )
centered = false

[node name="VersionLabel" type="Label" parent="."]
light_mask = 0
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 17.6962
margin_top = -72.7595
margin_right = 199.696
margin_bottom = -7.75952
rect_scale = Vector2( 0.5, 0.5 )
size_flags_vertical = 1
custom_colors/font_color = Color( 1, 1, 1, 0.278431 )
custom_fonts/font = ExtResource( 3 )
text = "v1.0.1"
valign = 1
max_lines_visible = 1

[node name="Label0" type="Label" parent="."]
light_mask = 0
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 777.696
margin_top = -345.0
margin_right = 1399.7
margin_bottom = -220.0
rect_scale = Vector2( 0.8, 0.8 )
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
text = "Enter Dungeon"
valign = 1
max_lines_visible = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label1" type="Label" parent="."]
light_mask = 0
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 777.696
margin_top = -211.0
margin_right = 959.696
margin_bottom = -85.9999
rect_scale = Vector2( 0.8, 0.8 )
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
text = "Exit"
valign = 1
max_lines_visible = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pointer" type="Sprite" parent="."]
position = Vector2( 690, 903.875 )
scale = Vector2( 4.75, 4.75 )
texture = ExtResource( 4 )
offset = Vector2( 0, -3 )

[node name="charSelector" type="Sprite" parent="."]
position = Vector2( 450, 868 )
rotation = -3.89208
scale = Vector2( 4.75, 4.75 )
texture = ExtResource( 10 )
offset = Vector2( 0, -3 )
region_enabled = true
region_rect = Rect2( 0, 0, 20, 20 )

[node name="coin" type="Sprite" parent="."]
position = Vector2( 1721.5, 757.5 )
scale = Vector2( 13.6875, 13.6875 )
texture = ExtResource( 6 )

[node name="potion" type="Sprite" parent="."]
position = Vector2( 1701.5, 902 )
scale = Vector2( 13.6875, 13.6875 )
texture = ExtResource( 7 )

[node name="chest" type="Sprite" parent="."]
position = Vector2( 1551, 818 )
scale = Vector2( 11.125, 11.125 )
texture = ExtResource( 8 )

[node name="TitleMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -10.4
pitch_scale = 0.88
bus = "Reverb"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/selected = SubResource( 1 )

[node name="CharSelectorAnim" type="AnimationPlayer" parent="."]
anims/selected = SubResource( 2 )
anims/selectedChar = SubResource( 3 )

[node name="Character" type="AnimatedSprite" parent="."]
position = Vector2( 300, 800 )
scale = Vector2( 10, 10 )
frames = SubResource( 4 )
animation = "elf"
frame = 2
playing = true
